--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
   </style>
 </head>
 <body>
-  <input type="text" onkeyup="plot()">
-  <div></div>
+  <input type="text" onkeyup="plot()" value="1m">
+  <div>
+    <img src="images/im.png>
+  </div>
   <script>
     const input = document.querySelector('input')
     const div = document.querySelector('div')
