--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <input type="text" onkeyup="plot()" value="1m">
   <div>
-    <img src="images/im.png">
+    <img src="images/1m.png">
   </div>
   <script>
     const input = document.querySelector('input')
